--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -185,7 +185,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    /*background: url(../img/callout.jpg) no-repeat center center scroll;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -237,3 +237,5 @@ hr.small {
 footer {
     padding: 100px 0;
 }
+.modal-dialog {width:600px;}
+.thumbnail {margin-bottom:6px;}
