--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -190,6 +190,7 @@ hr.small {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    margin-bottom: 20px;
 }
 
 /* Portfolio */
